# Heads-or-Tails-

./: .git codespace.code-workspace  .gitignore  README.md  app.py  config.toml  logs-packattack93-coin-toss-app-main-app.py-2025-05-03T01_07_54.669Z.txt  pyproject.toml  render.yaml  requirements.txt  runtime.txt
.streamlit/: config.toml
coin-toss-app/: config.toml
coin-toss-app/.streamlit/coin-toss-app/: app.py  streamlit app rev.2.py
