     [project]
     name = "coin-toss-app"
     version = "0.1.0"
     description = "A Streamlit app for simulating coin tosses"
     authors = ["Your Name <your.email@example.com>"]
     license = {text = "MIT"}
     dependencies = [
         "pandas==2.0.3",
         "scipy==1.11.1",
         "streamlit==1.25.0",
         "altair==5.0.1",
         "plotly==5.15.0"
     ]
     ```
3. **Specify Build System Requirements**:
   - Add a `[build-system]` section to specify the build backend and its requirements. For example:
     
```toml
     [build-system]
     requires = ["setuptools>=42", "wheel"]
     build-backend = "setuptools.build_meta"
     ```
4. **Optional: Add Tool-Specific Configurations**:
   - If you use tools like `black`, `ruff`, or `pytest`, you can configure them under the `[tool]` section. For example:
     
```toml
     [tool.black]
     line-length = 88
     target-version = ["py39"]

     [tool.ruff]
     select = ["E", "F", "W"]
     ```
5. **Save the File**:
   - Save the `pyproject.toml` file in the root of your project directory.

6. **Validate the File**:
   - Run `pip install .` or `pip install -e .` in your terminal to ensure the `pyproject.toml` file is correctly configured.

Let me know if you need help with specific tools or configurations!